--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.chan.moviesearcher.ui.MovieSearchViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="테스트입니다."
-            app:layout_constraintBottom_toBottomOf="parent"
+        <EditText
+            android:id="@+id/et_input"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/activity_main_hint_input"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingStart="@dimen/activity_main_padding_horizontal"
+            android:paddingEnd="@dimen/activity_main_padding_horizontal"
+            android:text="@={viewModel.query}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_main_content"
+            bind_recyclerView_replaceItem="@{viewModel.movies.items}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:listitem="@layout/rv_main_item"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_input" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
