--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.chan.moviesearcher.ui.MovieSearchViewModel" />
@@ -27,16 +28,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_main_content"
-            bind_recyclerView_replaceItem="@{viewModel.movies.items}"
+            android:id="@+id/rv_content"
+            bind_recyclerView_replaceItem="@{viewModel.movies}"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            tools:listitem="@layout/rv_main_item"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_input" />
+            app:layout_constraintTop_toBottomOf="@id/et_input"
+            app:spanCount="3"
+            tools:listitem="@layout/rv_main_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
