--- a/app/src/main/res/layout/rv_search_item.xml
+++ b/app/src/main/res/layout/rv_search_item.xml
@@ -7,6 +7,10 @@
         <variable
             name="item"
             type="com.chan.moviesearcher.domain.dto.ItemDto" />
+
+        <variable
+            name="viewModel"
+            type="com.chan.moviesearcher.ui.main.MovieSearchViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,6 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
+            android:onClick="@{()-> viewModel.onClickSaveItem(item)}"
             app:layout_constraintBottom_toTopOf="@id/tv_date"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
