--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
     <dimen name="activity_main_padding_horizontal">12dp</dimen>
+    <dimen name="common_padding_horizontal">8dp</dimen>
 </resources>
