--- a/app/src/main/res/layout/rv_progress_item.xml
+++ b/app/src/main/res/layout/rv_progress_item.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <data>
 
         <variable
-            name="headerItem"
-            type="com.chan.moviesearcher.ui.main.data.HeaderData" />
+            name="progressItem"
+            type="com.chan.moviesearcher.ui.main.data.ProgressItem" />
+
 
     </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_date"
+        <ProgressBar
+            android:id="@+id/progress"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:paddingHorizontal="20dp"
-            android:text="@{headerItem.title}"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
