--- a/feature/movie/src/main/res/layout/rv_search_item.xml
+++ b/feature/movie/src/main/res/layout/rv_search_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.chan.movie.domain.dto.ItemDto" />
+            type="com.chan.movie.domain.data.ItemData" />
 
         <variable
             name="viewModel"
