--- a/feature/movie/src/main/res/layout/activity_main.xml
+++ b/feature/movie/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:id="@+id/view_tab_bottom_line"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/black"
+            android:background="#ff000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tabs" />
