[수정] - 패키지 및 클래스 네이밍

--- a/feature/movie/src/main/res/layout/rv_save_item.xml
+++ b/feature/movie/src/main/res/layout/rv_save_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.chan.movie.domain.data.ItemData" />
+            type="com.chan.movie.domain.data.Item" />
 
         <variable
             name="viewModel"
