--- a/feature/movie/src/main/res/layout/rv_search_item.xml
+++ b/feature/movie/src/main/res/layout/rv_search_item.xml
@@ -25,6 +25,15 @@
             android:paddingHorizontal="20dp"
             android:text="@{item.pubDate}"
             android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@id/view_tab_bottom_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <View
+            android:id="@+id/view_tab_bottom_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
