--- a/feature/movie/src/main/res/layout/dialog_common.xml
+++ b/feature/movie/src/main/res/layout/dialog_common.xml
@@ -4,7 +4,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:background="#ffffff">
 
         <TextView
@@ -28,7 +28,8 @@
             app:layout_constraintEnd_toStartOf="@id/btn_negative"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            />
 
         <Button
             android:id="@+id/btn_negative"
