--- a/feature/movie/src/main/res/layout/rv_search_item.xml
+++ b/feature/movie/src/main/res/layout/rv_search_item.xml
@@ -15,7 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="150dp">
 
         <TextView
             android:id="@+id/tv_date"
