--- a/feature/movie/src/main/res/layout/dialog_common.xml
+++ b/feature/movie/src/main/res/layout/dialog_common.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_root"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:background="#ffffff">
 
         <TextView
@@ -12,32 +13,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:minHeight="100dp"
+            android:minHeight="200dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn_positive"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_positive"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="2dp"
             android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
             android:gravity="center"
             android:text="@string/dialog_common_btn_text_positive"
             app:layout_constraintEnd_toStartOf="@id/btn_negative"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            />
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
         <Button
             android:id="@+id/btn_negative"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="4dp"
+            android:gravity="center"
             android:text="@string/dialog_common_btn_text_negative"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_positive"
