[추가] - 리스트아이템의 첫번째 아이템일 경우 다이얼로그 UI 상하 배치 변경

--- a/feature/movie/src/main/res/layout/dialog_common.xml
+++ b/feature/movie/src/main/res/layout/dialog_common.xml
@@ -14,37 +14,42 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:minHeight="200dp"
+            app:layout_constraintBottom_toTopOf="@id/cl_button_group"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_positive"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/btn_positive"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="2dp"
-            android:gravity="center"
-            android:text="@string/dialog_common_btn_text_positive"
-            app:layout_constraintEnd_toStartOf="@id/btn_negative"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
-        <Button
-            android:id="@+id/btn_negative"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_button_group"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="4dp"
-            android:gravity="center"
-            android:text="@string/dialog_common_btn_text_negative"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btn_positive"
-            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+            app:layout_constraintTop_toBottomOf="@id/tv_title">
 
+            <Button
+                android:id="@+id/btn_positive"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="2dp"
+                android:gravity="center"
+                android:text="@string/dialog_common_btn_text_positive"
+                app:layout_constraintEnd_toStartOf="@id/btn_negative"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <Button
+                android:id="@+id/btn_negative"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="4dp"
+                android:gravity="center"
+                android:text="@string/dialog_common_btn_text_negative"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/btn_positive"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
