[수정] - 리스트 아이템&다이얼로그 높이가 고정값일때의 위치 지정

--- a/feature/movie/src/main/res/layout/dialog_common.xml
+++ b/feature/movie/src/main/res/layout/dialog_common.xml
@@ -5,15 +5,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:background="#ffffff">
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:gravity="center"
-            android:minHeight="200dp"
             app:layout_constraintBottom_toTopOf="@id/cl_button_group"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +21,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_button_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title">
 
             <Button
